--- a/css/mutebot.css
+++ b/css/mutebot.css
@@ -8,6 +8,7 @@ html {
 	-webkit-tap-highlight-color: rgba(255,255,255,0);
 	-webkit-tap-highlight-color: transparent;
 	box-sizing: inherit;
+	font-size: 1rem;
 }
 
 *:before,
@@ -144,6 +145,7 @@ table{
 
 td {
 	word-wrap:break-word;
+	vertical-align: top;
 }
 
 thead {
@@ -158,6 +160,7 @@ table {
 pre {
 	background-color: #f6f6f6;
 	padding: .25rem .35rem;
+	margin: 0;
 }
 
 
